--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebUI 2 - Deno - Todo</title>
     <link rel="stylesheet" href="./index.css" />
-    <script src="/webui.js"></script>
-    <script defer src="./index.js"></script>
+    <script defer src="./index.ts"></script>
   </head>
   <body>
     <template id="list-template">
