feat: add web-components

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,19 +26,6 @@
       </blockquote>
     </template>
 
-    <div id="root">
-      <h1 id="heading">ToDo</h1>
-      <form id="editor">
-        <input
-          id="editor-textfield"
-          name="editor-textfield"
-          placeholder="Enter todo"
-          disabled
-        />
-        <button type="submit" id="editor-submit-button" disabled>Add</button>
-      </form>
-      <div id="divider"></div>
-      <div id="body"></div>
-    </div>
+    <todo-app></todo-app>
   </body>
 </html>
