feat(client): use web components

--- a/src/client/input-form/template.html
+++ b/src/client/input-form/template.html
@@ -1,9 +1,9 @@
-<form id="editor">
+<form part="editor">
   <input
-    id="textfield"
+    part="textfield"
     name="editor-textfield"
     placeholder="Enter todo"
     disabled
   />
-  <button type="submit" id="button" disabled>Add</button>
+  <button type="submit" part="button" disabled>Add</button>
 </form>
