--- a/src/client/skeleton-item/template.html
+++ b/src/client/skeleton-item/template.html
@@ -1,5 +1,3 @@
-<list-item>
-  <span slot="start"></span>
-  <span slot="content"></span>
-  <span slot="end"></span>
-</list-item>
+<span part="checkbox"></span>
+<span part="content"></span>
+<span part="button"></span>
