--- a/src/client/todo-app/template.html
+++ b/src/client/todo-app/template.html
@@ -1,6 +1,4 @@
-<div id="root">
-  <h1 id="heading">ToDo</h1>
-  <input-form></input-form>
-  <div id="divider"></div>
-  <div id="body"></div>
-</div>
+<h1 part="heading">ToDo</h1>
+<input-form part="form"></input-form>
+<div part="divider"></div>
+<app-body part="body"></app-body>
