--- a/src/client/todo-item/template.html
+++ b/src/client/todo-item/template.html
@@ -1,5 +1,3 @@
-<list-item>
-  <input type="checkbox" slot="start"/>
-  <p slot="content">${this.content}</span>
-  <button slot="end">Remove</button>
-</list-item>
+<input type="checkbox" part="checkbox" />
+<p part="content">${this.content}</p>
+<button part="button">Remove</button>
